force-app/main/default/objects/UMB_Quote_Request__c/UMB_Quote_Request__c.object-meta.xml
<CustomObject>
    <label>UMB Quote Request</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UMB Quote Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>