force-app/main/default/objects/UMB_Quote_Request__c/fields/Access_Issue__c.field-meta.xml
<CustomField>
    <fullName>Access_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Constraint</label>
    <type>Checkbox</type>
</CustomField>