force-app/main/default/objects/UMB_Quote_Request__c/fields/CS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>CS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Requests (CS)</relationshipLabel>
    <relationshipName>Quote_Requests_CS</relationshipName>
    <type>Lookup</type>
</CustomField>