force-app/main/default/objects/UMB_Quote_Request__c/fields/CS_Decision__c.field-meta.xml
<CustomField>
    <fullName>CS_Decision__c</fullName>
    <label>CS Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Returned</fullName><default>false</default><label>Returned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>