force-app/main/default/objects/UMB_Quote_Request__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>