force-app/main/default/objects/UMB_Quote_Request__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Homeowner</fullName><default>false</default><label>Homeowner</label></value>
            <value><fullName>Builder</fullName><default>false</default><label>Builder</label></value>
            <value><fullName>Internal</fullName><default>false</default><label>Internal</label></value>
            <value><fullName>Warranty Review</fullName><default>false</default><label>Warranty Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>