force-app/main/default/objects/UMB_Quote_Request__c/fields/Drainage_Impact__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drainage Impact</label>
    <type>Checkbox</type>
</CustomField>