force-app/main/default/objects/UMB_Quote_Request__c/fields/Fire_Pla__c.field-meta.xml
<CustomField>
    <fullName>Fire_Pla__c</fullName>
    <label>Fire Place</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Firepit</fullName>
            </value>
            <value>
                <fullName>Standard Firepace</fullName>
            </value>
            <value>
                <fullName>Deluxe Fireplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>