force-app/main/default/objects/UMB_Quote_Request__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quote Requests (FM)</relationshipLabel>
    <relationshipName>UMB_Quote_Requests_FM</relationshipName>
    <type>Lookup</type>
</CustomField>