force-app/main/default/objects/UMB_Quote_Request__c/fields/FM_Billable_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>FM_Billable_Recommendation__c</fullName>
    <label>FM Billable Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Billable</fullName><default>false</default><label>Billable</label></value>
            <value><fullName>Non-Billable</fullName><default>false</default><label>Non-Billable</label></value>
            <value><fullName>Warranty</fullName><default>false</default><label>Warranty</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>