force-app/main/default/objects/UMB_Quote_Request__c/fields/Grill_Island__c.field-meta.xml
<CustomField>
    <fullName>Grill_Island__c</fullName>
    <label>Grill Island</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Standard Grill Island</fullName>
            </value>
            <value>
                <fullName>Deluxe Grill Island</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>