force-app/main/default/objects/UMB_Quote_Request__c/fields/Irrigation_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Upgrade__c</fullName>
    <label>Irrigation Upgrade</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Irrigation Upgrades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>