force-app/main/default/objects/UMB_Quote_Request__c/fields/Landscape_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Enhancement__c</fullName>
    <label>Landscape Enhancement</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Standanrd Landscape</fullName>
            </value>
            <value>
                <fullName>Deluxe Landscape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>