force-app/main/default/objects/UMB_Quote_Request__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests_Lot</relationshipName>
    <type>Lookup</type>
</CustomField>