force-app/main/default/objects/UMB_Quote_Request__c/fields/Measured_Linear_Ft__c.field-meta.xml
<CustomField>
    <fullName>Measured_Linear_Ft__c</fullName>
    <label>Measured Linear Ft</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>