force-app/main/default/objects/UMB_Quote_Request__c/fields/Measured_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Measured_Sqft__c</fullName>
    <label>Measured Sq Ft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>