force-app/main/default/objects/UMB_Quote_Request__c/fields/Pavers__c.field-meta.xml
<CustomField>
    <fullName>Pavers__c</fullName>
    <label>Pavers</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pavers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>