force-app/main/default/objects/UMB_Quote_Request__c/fields/Photos_Attached__c.field-meta.xml
<CustomField>
    <fullName>Photos_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Attached</label>
    <type>Checkbox</type>
</CustomField>