force-app/main/default/objects/UMB_Quote_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Scope Change</fullName><default>false</default><label>Scope Change</label></value>
            <value><fullName>Drainage Fix</fullName><default>false</default><label>Drainage Fix</label></value>
            <value><fullName>Utility Conflict</fullName><default>false</default><label>Utility Conflict</label></value>
            <value><fullName>Warranty Assessment</fullName><default>false</default><label>Warranty Assessment</label></value>
            <value><fullName>Additional Install</fullName><default>false</default><label>Additional Install</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>