force-app/main/default/objects/UMB_Quote_Request__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests_SA</relationshipName>
    <type>Lookup</type>
</CustomField>