force-app/main/default/objects/UMB_Quote_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Field Request</fullName><default>true</default><label>Field Request</label></value>
            <value><fullName>Submitted to Customer Success</fullName><default>false</default><label>Submitted to Customer Success</label></value>
            <value><fullName>Under Pricing Review</fullName><default>false</default><label>Under Pricing Review</label></value>
            <value><fullName>Approved for Customer</fullName><default>false</default><label>Approved for Customer</label></value>
            <value><fullName>Returned to Field Manager</fullName><default>false</default><label>Returned to Field Manager</label></value>
            <value><fullName>Canceled</fullName><default>false</default><label>Canceled</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>