force-app/main/default/objects/UMB_Quote_Request__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Routine</fullName><default>false</default><label>Routine</label></value>
            <value><fullName>Within 1 week</fullName><default>false</default><label>Within 1 week</label></value>
            <value><fullName>Same week</fullName><default>false</default><label>Same week</label></value>
            <value><fullName>Immediate</fullName><default>false</default><label>Immediate</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>