force-app/main/default/objects/UMB_Quote_Request__c/fields/Utility_Impact__c.field-meta.xml
<CustomField>
    <fullName>Utility_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility / 811 Impact</label>
    <type>Checkbox</type>
</CustomField>