force-app/main/default/objects/UMB_Quote_Request__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>UMB Quote Requests</relationshipLabel>
    <relationshipName>UMB_WO_Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>